cluster/apps/home-automation/homeassistant/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hass-mw
spec:
  stripPrefixRegex:
    regex:
      - "/hass"
