cluster/apps/home-automation/homeassistant/codeserver-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-codeserver
spec:
  selector:
    app: home-assistant
  ports:
    - protocol: TCP
      port: 12321
      targetPort: codeserver
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: ${CLUSTER_LB_HASS_CS}
