cluster/apps/home-automation/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  labels:
    app: homeassistant
spec:
  ports:
    - name: hass
      port: 8123
      targetPort: hass
      nodeport: 30285
  selector:
    app: homeassistant
  type: NodePort
