cluster/apps/home-automation/homeassistant/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hass-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
          namespace: home-automation
          scheme: http
    - match: Host(`hass-config.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: home-assistant-codeserver
          port: 12321
          namespace: home-automation
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "${SECRET_CERTIFICATE_DEFAULT}"
